--- a/WebApplication1/Views/Checkins/Index.cshtml
+++ b/WebApplication1/Views/Checkins/Index.cshtml
@@ -1,11 +1,57 @@
 ﻿@model IEnumerable<WebApplication1.Models.Checkin>
 
 @{
+    ViewBag.role = Session["Role_ID"];
+    ViewBag.show = Session["show"];
+    ViewBag.Name = Session["Username"];
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout - player.cshtml";
+    ViewBag.account = Session["account"];
+   // ViewBag.msg="";
+   
+
 }
+
+@{
+    if (ViewBag.role == 1)
+    {
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
+
+    else if (ViewBag.role == 2)
+    {
+        Layout = "~/Views/Shared/_Layout - manager.cshtml";
+    }
+
+    else
+    {
+        Layout = "~/Views/Shared/_Layout - player.cshtml";
+    }
+
+}
+
+
+
+@{
+    if (ViewBag.role == null)
+    {
+        // 權限是空值，跳轉到登錄頁
+        <script>
+            alert("你無使用權限，媽德給我去登錄吧")
+            location.href = "/Login/Index";
+        </script>
+
+    }
+
+}
+
+<!DOCTYPE html>
+
+<html>
 <head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Index</title>
     <style>
+
         .card {
             padding: 10px;
         }
@@ -13,89 +59,110 @@
         .pagetitle {
             font-size: 15px;
         }
+
+        .txt a {
+            color: white;
+        }
+
+        .card {
+            padding: 10px;
+        }
     </style>
 </head>
+<body>
 
-
-<main class="main" id="main">
-    <div class="pagetitle">
-        <h1>選手打卡 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>提供選手紀錄訓練時間用。</span></h1>
-        <nav>
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="~/Home">Home</a></li>
-                <li class="breadcrumb-item active">選手打卡</li>
-            </ol>
-        </nav>
-    </div><!-- End Page Title -->
-
-    <hr />
-    <div class="card">
-
-
-        <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <i class="bi bi-exclamation-triangle me-1"></i>
-            系統目前時間為: <b>@DateTime.Now</b> ，提醒您記得要訓練開始及結束都要打卡!!
-
+    <main class="main" id="main">
+        @ViewBag.msg
+        <div class="pagetitle">
+            <h1>選手打卡 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>請提供說明</span></h1>
+            <nav>
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="~/Home">Home</a></li>
+                </ol>
+            </nav>
         </div>
-        <div>
-            <div>
-                <button class="btn btn-danger">@Html.ActionLink("點我打卡", "Create", null, new { style = "color: white;" })</button>  |
-                <button class="btn btn-success">我要離開點我一下</button>
-            </div>
-            
-            
 
+        <div class="alert alert-warning alert-dismissible fade show">
+          現在時間：@DateTime.Now.ToString()     |    請務必上、下班都要記得編輯打卡單並按儲存以確保資料完整性。
         </div>
         <hr />
-        <div>
-            <p>以下是您的打卡紀錄</p>
+        <div class="mb-3">
+            <button class="btn btn-danger">
+                <span class="txt"><i class="ri-add-circle-fill"></i> &nbsp;@Html.ActionLink("新增", "Create")</span>
+            </button>
+
+            <a href="~/STUCheckinsView" class="btn btn-primary" target="_parent">產生出勤紀錄表</a>
+
         </div>
-        <table class="table table table-striped">
-            <tr>
-                <th>
-                    上班時間
-                </th>
-                <th>
-                    下班時間
-                </th>
-                <th>
-                    時數
-                </th>
-                <th>
-                    備註
-                </th>
-
-            </tr>
-
-            @foreach (var item in Model)
-            {
+        <div class="card info-card sales-card" id="card">
+            <h5 class="mb-3 mt-3"><i class="ri-bank-line text-danger"></i>  <b>@ViewBag.Name  </b> 同學您好，以下是你的打卡紀錄.......</h5>
+            <table class="table table-striped">
                 <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Work_Date)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Getoff_Date)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.time)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Note)
-                    </td>
+                    <th>
+                        上班時間
+                    </th>
+                    <th>
+                        下班時間
+                    </th>
+                    <th>
+                        時數
+                    </th>
+                    <th>
+                        備註
+                    </th>
 
+                    <th>資料操作</th>
                 </tr>
-            }
 
-        </table>
-        <hr />
-        <div class="faq">
-            <p>
-                <i class="ri-error-warning-fill"></i> 時數計算方式：<br />中午12:00~下午13:00為休息時間，故時數不算在內!<br />
-                例如:王小樹今天上午8點開始訓練，下午5點結束訓練，則時數計算方式會是 <b>08:00~12:00(4hr)+13:00~17:00(4hr)</b>，總計時數會是 <b>8小時</b>
-            </p>
+                @foreach (var item in Model)
+                {
+
+                    <tr>
+                        @if (ViewBag.account == item.AccountData.Account.ToString())
+                        {
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Work_Date)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Getoff_Date)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.time)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Note)
+                            </td>
+
+                            <td>
+                                @Html.ActionLink("編輯", "Edit", new { id = item.ID }, new { @class = "btn btn-success px-2" }) |
+                                @Html.ActionLink("刪除", "Delete", new { id = item.ID }, new { @class = "btn btn-danger px-2" })
+                            </td>
+                        }
+
+                    </tr>
+                }
+
+            </table>
+
 
         </div>
-    </div>
 
-</main>
+
+    </main>
+
+</body>
+</html>
+@if (ViewBag.msg != null)
+{
+    <script>
+            alert('@ViewBag.msg');
+    </script>
+}
+
+@if (ViewBag.show != null)
+{
+    <script>
+            alert(' @ViewBag.show');
+    </script>
+}
 
