--- a/WebApplication1/Views/Checkins/Delete.cshtml
+++ b/WebApplication1/Views/Checkins/Delete.cshtml
@@ -1,65 +1,141 @@
 ﻿@model WebApplication1.Models.Checkin
 
 @{
-    ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout - player.cshtml";
+    ViewBag.Title = "刪除打卡";
+    ViewBag.Name = Session["Username"];
+    ViewBag.User_ID = Session["User_ID"];
+    ViewBag.role = Session["Role_ID"];
+    ViewBag.time = Session["Time"];
+}
+@* 權限判斷 *@
+@{
+    if (ViewBag.role == 1)
+    {
+        Layout = "~/Views/Shared/_Layout.cshtml";
+    }
+
+    else if (ViewBag.role == 2)
+    {
+        Layout = "~/Views/Shared/_Layout - manager.cshtml";
+    }
+
+    else
+    {
+        Layout = "~/Views/Shared/_Layout - player.cshtml";
+    }
+
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Checkin</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Work_Date)
-        </dt>
+@{
+    if (ViewBag.role == null)
+    {
+        // 權限是空值，跳轉到登錄頁
+        <script>
+            alert("你無使用權限，媽德給我去登錄吧")
+            location.href = "/Login/Index";
+        </script>
 
-        <dd>
-            @Html.DisplayFor(model => model.Work_Date)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Getoff_Date)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Getoff_Date)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.time)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.time)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Note)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Note)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AccountData.Account)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AccountData.Account)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
     }
-</div>
+}
+
+<!DOCTYPE html>
+
+<html>
+<head>
+    <meta name="viewport" content="width=device-width" />
+    <title>Delete</title>
+    <style>
+        .card {
+            padding: 10px;
+        }
+
+        .pagetitle {
+            font-size: 15px;
+        }
+
+        .txt a {
+            color: white;
+        }
+
+        .card {
+            padding: 10px;
+        }
+    </style>
+</head>
+<body>
+    <main class="main" id="main">
+        <div class="pagetitle">
+
+            <h1>選手打卡 <span class="pagetitle"><i class="ri-arrow-drop-right-fill"></i>請維護說明。</span></h1>
+            <nav>
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="~/Home">Home</a></li>
+                    <li class="breadcrumb-item active">選手打卡</li>
+                </ol>
+            </nav>
+        </div><!-- End Page Title -->
+        <div class="alert alert-danger bg-danger text-light border-0 alert-dismissible fade show" role="alert">
+
+            <i class="ri-delete-bin-5-fill"></i> 注意！！請再次確認是否刪除此筆資料！！
+
+        </div>
+        <div class="card" id="card">
+            <dl class="dl-horizontal">
+                <dt>
+                    @Html.DisplayNameFor(model => model.Work_Date)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Work_Date)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Getoff_Date)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Getoff_Date)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.time)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.time)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.Note)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Note)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.AccountData.Account)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.AccountData.Account)
+                </dd>
+
+            </dl>
+
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-actions no-color">
+                    <input type="submit" value="確認刪除" class="btn btn-danger" /> |
+                    @Html.ActionLink("返回", "Index", null,new{ @class = "btn btn-success"})
+                </div>
+            }
+        </div>
+    </main>
+        
+   
+</body>
+</html>
