--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -126,7 +126,7 @@
             </li>
             <!-- ======= 戰隊管理 ======= -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#">
+                <a class="nav-link collapsed" href="~/TeamLists">
                     <i class="ri ri-database-fill"></i>
                     <span>戰隊管理</span>
                 </a>
@@ -138,17 +138,17 @@
                 </a>
                 <ul id="player-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                     <li>
-                        <a href="#">
+                        <a href="~/PlayerLists">
                             <i class="bi bi-circle"></i><span>選手資訊維護</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="/PlayerDatas">
                             <i class="bi bi-circle"></i><span>選手數據管理</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="~/CheckinsView">
                             <i class="bi bi-circle"></i><span>選手出缺勤管理</span>
                         </a>
                     </li>
@@ -190,11 +190,12 @@
             <hr />
             <li class="nav-heading">個人專區</li>
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#">
+            
+                <a class="nav-link collapsed" href="~/UserInfo/Edit/@ViewBag.User_ID">
                     <i class="ri-account-circle-fill"></i>
                     <span>個人資訊</span>
                 </a>
-                <a class="nav-link collapsed" href="#">
+                <a class="nav-link collapsed" href="~/FeedBacks/Create">
                     <i class="ri-emotion-happy-fill"></i>
                     <span>系統滿意度</span>
                 </a>
