--- a/WebApplication1/Views/FeedBacks/Create.cshtml
+++ b/WebApplication1/Views/FeedBacks/Create.cshtml
@@ -72,7 +72,7 @@
                 <div class="form-horizontal">
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
-                        @Html.LabelFor(model => model.ID, htmlAttributes: new { @class = "control-label col-md-2" })
+                       反饋單編號（系統自動生成）：
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.ID, new { htmlAttributes = new { @class = "form-control" ,@readonly = "readonly",Value = ViewBag.ID} })
                             @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
@@ -80,7 +80,7 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Time, htmlAttributes: new { @class = "control-label col-md-2" })
+                        建立時間（系統自動生成）：
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.Time, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly", Value = DateTime.Now } })
                             @Html.ValidationMessageFor(model => model.Time, "", new { @class = "text-danger" })
@@ -88,7 +88,7 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Resquiet, htmlAttributes: new { @class = "control-label col-md-2" })
+回饋意見：
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.Resquiet, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Resquiet, "", new { @class = "text-danger" })
@@ -96,24 +96,18 @@
                     </div>
 
                     <div class="form-group">
-                        @Html.LabelFor(model => model.Score, htmlAttributes: new { @class = "control-label col-md-2" })
+                        系統回饋分數（1~10分）：
                         <div class="col-md-10">
                             @Html.EditorFor(model => model.Score, new { htmlAttributes = new { @class = "form-control" } })
                             @Html.ValidationMessageFor(model => model.Score, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.Note, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.Note, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.Note, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-
+                    
+                    <br />
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="新增反饋" class="btn btn-default" />
+                            <input type="submit" value="新增反饋" class="btn btn-success" />
                         </div>
                     </div>
                 </div>
