--- a/WebApplication1/Views/Shared/_Layout - player.cshtml
+++ b/WebApplication1/Views/Shared/_Layout - player.cshtml
@@ -166,35 +166,13 @@
             </li>
             <!-- ======= 訓練計畫管理 ======= -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#">
+                <a class="nav-link collapsed" href="~/TrainingPlans">
                     <i class="ri ri-file-paper-2-fill"></i>
                     <span>訓練計劃管理</span>
                 </a>
             </li>
-            <!-- ======= 賽事管理 ======= -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#">
-                    <i class="ri ri-gamepad-fill"></i>
-                    <span>賽事管理</span>
-                </a>
-            </li>
-            <!-- ======= 設備管理 ======= -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#equipment-nav" data-bs-toggle="collapse" href="#">
-                    <i class="ri ri-inbox-archive-fill"></i><span>設備管理</span><i class="bi bi-chevron-down ms-auto"></i>
-                </a>
-                <ul id="equipment-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                    @*<li>
-                        <a href="#">
-                            <i class="bi bi-circle"></i><span>設備物料管理</span>
-                        </a>
-                    </li>*@
-                    <li>
-                        <a href="#">
-                            <i class="bi bi-circle"></i><span>設備借用維護</span>
-                        </a>
-                    </li>
-
+            
+           
                 </ul>
             </li>
             <hr />
