--- a/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/Views/Shared/_Layout.cshtml
@@ -156,20 +156,14 @@
             </li>
             <!-- ======= 訓練計畫管理 ======= -->
             <li class="nav-item">
-                <a class="nav-link collapsed" href="#">
+                <a class="nav-link collapsed" href="~/TrainingPlans">
                     <i class="ri ri-file-paper-2-fill"></i>
                     <span>訓練計劃管理</span>
                 </a>
             </li>
-            <!-- ======= 賽事管理 ======= -->
-            <li class="nav-item">
-                <a class="nav-link collapsed" href="#">
-                    <i class="ri ri-gamepad-fill"></i>
-                    <span>賽事管理</span>
-                </a>
-            </li>
+            
             <!-- ======= 設備管理 ======= -->
-            <li class="nav-item">
+            <!--<li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#equipment-nav" data-bs-toggle="collapse" href="#">
                     <i class="ri ri-inbox-archive-fill"></i><span>設備管理</span><i class="bi bi-chevron-down ms-auto"></i>
                 </a>
@@ -183,7 +177,7 @@
                         <a href="#">
                             <i class="bi bi-circle"></i><span>設備借用維護</span>
                         </a>
-                    </li>
+                    </li>-->
 
                 </ul>
             </li>
